[package]
name = "rust-utp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["io-util", "rt-multi-thread", "macros", "net", "sync", "time"] }
utp-rs = { version = "0.1.0-alpha.5"}
#utp-rs = { git = 'https://github.com/KolbyML/utp', branch = 'time-weird' }
tracing = { version = "0.1.37", features = ["std", "attributes", "log"] }
tracing-subscriber = "0.3.16"
